syntax = "proto3";
package network.launch.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "network/launch/v1/genesis_account.proto";
import "network/launch/v1/genesis_validator.proto";
import "network/launch/v1/param_change.proto";
import "network/launch/v1/vesting_account.proto";

option go_package = "github.com/ignite/network/x/launch/types";

message Request {
  uint64 launch_id = 1;
  uint64 request_id = 2;
  string creator = 3 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  int64 created_at = 4;
  RequestContent content = 5 [(gogoproto.nullable) = false];
  enum Status {
    PENDING = 0;
    APPROVED = 1;
    REJECTED = 2;
  }
  Status status = 6;
}

message RequestContent {
  oneof content {
    GenesisAccount genesis_account = 1;
    VestingAccount vesting_account = 2;
    GenesisValidator genesis_validator = 3;
    AccountRemoval account_removal = 4;
    ValidatorRemoval validator_removal = 5;
    ParamChange param_change = 6;
  }
}

message AccountRemoval {
  string address = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

message ValidatorRemoval {
  string valAddress = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}
